# apep

./: .gitmodules  .pylintrc  CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
apep/: CMakeLists.txt
apep/ml/: CMakeLists.txt
apep/ml/genetic_src/: CMakeLists.txt  genetic.cpp
include/: _apep_config.h
