[build-system]
requires = ["setuptools","cpymake", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "apep"
version = "0.0.1"
description = "Apep is"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "James Calo", email = "jamesafcalo@gmail.com"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy",
  #'importlib-metadata; python_version<"3.8"',
]

#TODO: Remove to cpymake
[tool.setuptools.packages.find]
exclude = ["cmake"] # temp

[tool.black]
preview = true

# Better to specify in setup.py as setup() is required to create Distribution
# [tool.setuptools.cmdclass]
# build_ext = "cpymake.command.build_ext.build_ext"



