[metadata]
name = Project_Name
version = 0.0.1
author = Author_Name
author_email = Author_Email
description = Description
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Username/Project_Name.git
classifiers = 
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
#Leave zip_safe until "proven" otherwise
zip_safe = True 
packages = find:
python_requires = >=3.9.*
#install_requires =
  #Package_Name
include_package_data = True

[options.packages.find]
exclude = 
  tests
